SERVER-90778 Move RoundUpPreparedTimestamps out of RecoveryUnit to callers (#26738)

GitOrigin-RevId: 0a7a13426659250462fca0bf1e0d8ec9ecea7855