src/mongo/db/repl/transaction_oplog_application.cpp
@@ -307,15 +307,15 @@ Status _applyTransactionFromOplogChain(OperationContext* opCtx,
             WriteUnitOfWork wunit(opCtx);
 
             // We might replay a prepared transaction behind oldest timestamp.
-            shard_role_details::getRecoveryUnit(opCtx)->setRoundUpPreparedTimestamps(true);
-
-            BSONObjBuilder resultWeDontCareAbout;
+            // Set roundUpPreparedTimestamps and allocate a snapshot here.
+            invariant(!shard_role_details::getRecoveryUnit(opCtx)->isActive());
+            RecoveryUnit::OpenSnapshotOptions openSnapshotOptions{.roundUpPreparedTimestamps =
+                                                                      true};
+            Lock::GlobalLock globalLock(opCtx, MODE_IX);
+            allocateSnapshotWithConsistentCatalog(opCtx, openSnapshotOptions);
 
             status = _applyOperationsForTransaction(opCtx, ops, mode);
             if (status.isOK()) {
-                // If the transaction was empty then we have no locks, ensure at least Global
-                // IX.
-                Lock::GlobalLock lk(opCtx, MODE_IX);
                 shard_role_details::getRecoveryUnit(opCtx)->setPrepareTimestamp(commitTimestamp);
                 wunit.prepare();
 
@@ -651,9 +651,12 @@ Status _applyPrepareTransaction(OperationContext* opCtx,
                 PrepareConflictBehavior::kIgnoreConflictsAllowWrites);
 
             // We might replay a prepared transaction behind oldest timestamp.
+            RecoveryUnit::OpenSnapshotOptions openSnapshotOptions =
+                RecoveryUnit::kDefaultOpenSnapshotOptions;
             if (repl::OplogApplication::inRecovering(mode) ||
                 mode == repl::OplogApplication::Mode::kInitialSync) {
-                shard_role_details::getRecoveryUnit(opCtx)->setRoundUpPreparedTimestamps(true);
+                invariant(!shard_role_details::getRecoveryUnit(opCtx)->isActive());
+                openSnapshotOptions.roundUpPreparedTimestamps = true;
             }
 
             // Release WUOW, transaction lock resources and abort storage transaction
@@ -667,7 +670,8 @@ Status _applyPrepareTransaction(OperationContext* opCtx,
 
             // Starts the WUOW.
             txnParticipant.unstashTransactionResources(
-                opCtx, "prepareTransaction", repl::OplogApplication::inRecovering(mode));
+                opCtx, "prepareTransaction", false /* forUnyield */, openSnapshotOptions);
+            invariant(shard_role_details::getRecoveryUnit(opCtx)->isActive());
 
             // Set this in case the application of any ops needs to use the prepare timestamp
             // of this transaction. It should be cleared automatically when the txn finishes.
@@ -698,14 +702,6 @@ Status _applyPrepareTransaction(OperationContext* opCtx,
                 LOGV2(21847, "Hit applyOpsHangBeforePreparingTransaction failpoint");
                 applyOpsHangBeforePreparingTransaction.pauseWhileSet(opCtx);
             }
-
-            // If we are in a recovery mode, we should have set roundUpPreparedTimestamps to true
-            // above, and that setting should have persisted after we unstashed the transaction
-            // resources and started the WUOW above. This setting is necessary for the subsequent
-            // call to prepareTransaction to succeed in the case where the prepare timestamp is
-            // older than the stable timestamp.
-            invariant(!repl::OplogApplication::inRecovering(mode) ||
-                      shard_role_details::getRecoveryUnit(opCtx)->getRoundUpPreparedTimestamps());
 
             txnParticipant.prepareTransaction(opCtx, prepareOp.getOpTime());
 
