src/mongo/db/storage/wiredtiger/wiredtiger_begin_transaction_block.cpp
@@ -139,7 +139,7 @@ static std::vector<CompiledConfiguration>& compiledBeginTransactions = makeCompi
 WiredTigerBeginTxnBlock::WiredTigerBeginTxnBlock(
     WiredTigerSession* session,
     PrepareConflictBehavior prepareConflictBehavior,
-    RoundUpPreparedTimestamps roundUpPreparedTimestamps,
+    bool roundUpPreparedTimestamps,
     RoundUpReadTimestamp roundUpReadTimestamp,
     RecoveryUnit::UntimestampedWriteAssertionLevel allowUntimestampedWrite)
     : _session(session) {
@@ -153,7 +153,9 @@ WiredTigerBeginTxnBlock::WiredTigerBeginTxnBlock(
     }
 
     int config = getConfigOffset(static_cast<int>(prepareConflictBehavior),
-                                 static_cast<int>(roundUpPreparedTimestamps),
+                                 static_cast<int>(roundUpPreparedTimestamps
+                                                      ? RoundUpPreparedTimestamps::kRound
+                                                      : RoundUpPreparedTimestamps::kNoRound),
                                  static_cast<int>(roundUpReadTimestamp),
                                  static_cast<int>(no_timestamp));
     const char* compiled_config = nullptr;
