src/mongo/db/transaction/transaction_participant.h
@@ -95,6 +95,18 @@ enum class TerminationCause {
 };
 
 /**
+ * Allocate the snapshot together with a consistent CollectionCatalog instance outside
+ * critical sections. Use optimistic concurrency control and check that there was no write to
+ * the CollectionCatalog while we allocated the storage snapshot. Stash the catalog instance so
+ * collection lookups within this transaction are consistent with the snapshot.
+ *
+ * Active transactions are protected by the locking subsystem, so we must hold at least a
+ * Global intent lock before calling this function to start a transaction.
+ */
+void allocateSnapshotWithConsistentCatalog(
+    OperationContext* opCtx, const RecoveryUnit::OpenSnapshotOptions& openSnapshotOptions);
+
+/**
  * This class maintains the state of a transaction running on a server session. It can only exist as
  * a decoration on the Session object and its state can only be modified by the thread which has the
  * session checked-out.
@@ -614,10 +626,12 @@ public:
          * Transfers management of transaction resources from the Session to the currently
          * checked-out OperationContext.
          */
-        void unstashTransactionResources(OperationContext* opCtx,
-                                         const std::string& cmdName,
-                                         bool forRecoveryPreparedTxnApplication = false,
-                                         bool forUnyield = false);
+        void unstashTransactionResources(
+            OperationContext* opCtx,
+            const std::string& cmdName,
+            bool forUnyield = false,
+            const RecoveryUnit::OpenSnapshotOptions& openSnapshotOptions =
+                RecoveryUnit::kDefaultOpenSnapshotOptions);
 
         /**
          * Puts a transaction into a prepared state and returns the prepareTimestamp and the list of
@@ -927,7 +941,9 @@ public:
         // provided, it is up to the caller to ensure that timestamp is greater than or equal to the
         // all-committed timestamp before calling this method (e.g. by calling
         // ReplCoordinator::waitForOpTimeForRead).
-        void _setReadSnapshot(OperationContext* opCtx, repl::ReadConcernArgs readConcernArgs);
+        void _setReadSnapshot(OperationContext* opCtx,
+                              repl::ReadConcernArgs readConcernArgs,
+                              const RecoveryUnit::OpenSnapshotOptions& openSnapshotOptions);
 
         // Finishes committing the multi-document transaction after the storage-transaction has been
         // committed, the oplog entry has been inserted into the oplog, and the transactions table
@@ -1123,8 +1139,7 @@ public:
          * -----------------------------------------------------------------------------
          */
         void _releaseTransactionResourcesToOpCtx(OperationContext* opCtx,
-                                                 MaxLockTimeout maxLockTimeout,
-                                                 bool forRecoveryPreparedTxnApplication);
+                                                 MaxLockTimeout maxLockTimeout);
 
         TransactionParticipant::PrivateState& p() {
             return _tp->_p;
