src/mongo/db/transaction/transaction_participant_resource_yielder.cpp
@@ -80,11 +80,7 @@ void TransactionParticipantResourceYielder::unyield(OperationContext* opCtx) {
                     opCtx, OperationContextSession::CheckInReason::kYield);
             });
 
-            txnParticipant.unstashTransactionResources(
-                opCtx,
-                _cmdName,
-                false /* forRecoveryPreparedTxnApplication */,
-                true /* forUnyield */);
+            txnParticipant.unstashTransactionResources(opCtx, _cmdName, true /* forUnyield */);
             releaseOnError.dismiss();
         }
     }
